--- a/src/views/pages/admin-users.ejs
+++ b/src/views/pages/admin-users.ejs
@@ -9,55 +9,7 @@
     <link rel="stylesheet" href="/static/css/admin.css">
 </head>
 <body>
-    <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary bg-opacity-75 sticky-top">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white" href="/admin">ZBase Admin</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="/admin">
-                            <i class="bi bi-speedometer2 me-1"></i> Dashboard
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active text-white" href="/admin/users">
-                            <i class="bi bi-people me-1"></i> Users
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="/admin/roles">
-                            <i class="bi bi-shield-lock me-1"></i> Roles
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="/admin/permissions">
-                            <i class="bi bi-key me-1"></i> Permissions
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="/admin/settings">
-                            <i class="bi bi-gear me-1"></i> Settings
-                        </a>
-                    </li>
-                </ul>
-                <div class="dropdown">
-                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="user-dropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="bi bi-person-circle me-2"></i>
-                        <span id="user-name">Admin</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-light dropdown-menu-end" aria-labelledby="user-dropdown">
-                        <li><a class="dropdown-item" href="/admin">Dashboard</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#" id="logout-btn">Sign out</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <%- include('../partials/navbar', {activePage: 'users'}) %>
 
     <div class="container-fluid">
         <!-- Main content -->
