--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -30,9 +30,8 @@
                             <button id="logout-button" class="btn btn-outline-secondary btn-lg px-4">Logout</button>
                         <% } %>
                     </div>
-                </div>
-                <div class="col-lg-6">
-                    <img src="/static/images/auth-illustration.svg" alt="Authentication Illustration" class="img-fluid" onerror="this.src='https://via.placeholder.com/600x400?text=ZBase+Auth+System'">
+                </div>                <div class="col-lg-6">
+                    <img src="/images/auth-illustration.svg" alt="Authentication Illustration" class="img-fluid" onerror="if (!this.hasAttribute('data-error-handled')) { this.setAttribute('data-error-handled', 'true'); this.src='/images/default-avatar.png'; }">
                 </div>
             </div>
         </div>
