--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -23,7 +23,7 @@
         </div>
         <hr>
         <div class="text-center">
-            <p>&copy; 2025 ZBase. All rights reserved.</p>
+            <p>&copy; 2025 zPlus. All rights reserved.</p>
         </div>
     </div>
 </footer>
